--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@
 #Godot
 *.scn filter=lfs diff=lfs merge=lfs -text
 *.res filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
